<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="2dp"
        android:background="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/editPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@color/secondary"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="10dp"
            android:text="@string/place"
            android:textColor="#CFD8DC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04000002" />

        <EditText
            android:id="@+id/editshortDescription"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@color/secondary"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:text="@string/short_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13999999"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editLongdescription"
            android:layout_width="393dp"
            android:layout_height="225dp"
            android:layout_margin="10dp"
            android:background="@color/secondary"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:text="@string/long_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32"
            android:autofillHints="" />

        <Button
            android:id="@+id/submit"
            android:layout_width="234dp"
            android:layout_height="52dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.96" />

        <ScrollView
            android:id="@+id/picscroll"
            android:layout_width="367dp"
            android:layout_height="227dp"
            app:layout_constraintBottom_toTopOf="@+id/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editLongdescription">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/imageView2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/Picture_name"
                    app:srcCompat="@drawable/fig001" />

                <ImageButton
                    android:id="@+id/imageView3"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/Picture_name"
                    app:srcCompat="@drawable/fig003" />

                <ImageButton
                    android:id="@+id/imageView4"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/Picture_name"
                    app:srcCompat="@drawable/fig004" />

                <ImageButton
                    android:id="@+id/imageView5"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/Picture_name"
                    app:srcCompat="@drawable/fig005" />

                <ImageButton
                    android:id="@+id/imageView6"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/Picture_name"
                    app:srcCompat="@drawable/fig006" />

                <ImageButton
                    android:id="@+id/imageView7"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/Picture_name"
                    app:srcCompat="@drawable/fig007" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>